lib/knob.h

/**************** Below is the interface for Julia *********************/

struct MatrixKnob;
struct FunctionKnob;
MatrixKnob* GetMatrixKnob(FunctionKnob* fknob, int i);
/**
 * @return Get cummulative time that has purely spent on SpMP SpMV.
 *         Can be useful for performance debugging to tell if
 *         we're not seeing expected performance because we didn't
 *         really improve kernel performance or because of other
 *         overhead.
 */
double GetSpMPSpMVTime();
void ResetSpMPSpMVTime();
double GetKnobSpMVTime();
void ResetKnobSpMVTime();
void SetLogLevel(int level);
void SetReuseInspection(bool reuse);
/**
 * @see GetSpMPSpMVTime
 */
double GetSpMPTriangularSolveTime();
void ResetSpMPTriangularSolveTime();
double GetKnobTriangularSolveTime();
void ResetKnobTriangularSolveTime();
void *CholFact(
    int m, int n, int *colptr, int *rowval, double *nzval,
    FunctionKnob *fknob);
void CholFactInverseDivide(
    void *factor, double *y, double *b, FunctionKnob *fknob);