lib/CSR_Interface.h

// load matrix
// Julia should call the following two function in order.
// Between the two calls, the CSR array space must be allocated.
void load_matrix_market_step1 (char *file, int *sizes, bool force_symmetric = false, bool transpose = false);
void load_matrix_market_step2(
  char *file, int *rowptr, int *colidx, double *values, int *sizes, bool one_based_CSR);
// return dot(x*y)
double dot(int n, const double *x, const double *y);
// sum(x)
double sum(int n, const double *x);
// w = min(x, alpha)
void min(int n, double *w, const double *x, double alpha);