src/lib-interface.jl

        
    if mknob_O->dss_handle == NULL
        mknob_O->dss_handle = dss_analyze(mknob_A->matrix)
    dss_factor(mknob_O->dss_handle, mknob_A->matrix)
"""
function cholfact_int32(
    A     :: SparseMatrixCSC,
    fknob :: Ptr{Void}
)
    if fknob == C_NULL
        # This case should never happen
        assert(false)
        return cholfact_int32(A)
    end

    mknob_A = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 0)
    assert(mknob_A != C_NULL)

    fill_matrix_info_once(mknob_A, A)

    ccall((:CholFact, LIB_PATH), Ptr{Void},
         (Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}, Ptr{Void}),
         size(A, 1), size(A, 2), A.colptr, A.rowval, A.nzval, fknob)
end

@doc """ 
Compute y = R \ t, where R is constant in structure.

Functionality:
    if fknob == NULL
       return y = R \ t
   get the input mknob_R from fknob
   if mknob_R->dss_handle == NULL
       return y = R \ t2
   else
       opt = MKL_DSS_DEFAULTS
       dss_solve!(mknob_R->dss_handle, t, y)
"""
function cholfact_inverse_divide!(
    y     :: Vector,
    R     :: Any,
    b     :: Vector,
    fknob :: Ptr{Void}
)
    if fknob == C_NULL
        # This case should never happen
        assert(false)
        y[:] = R \ b
        return y
    end

    ccall((:CholFactInverseDivide, LIB_PATH), Void,
          (Ptr{Void}, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Void}),
          R, y, b, fknob)
    y
end

@doc """ 
Compute y = R \ t, where R is constant in structure.

Functionality:
    if fknob == NULL
       return y = R \ t
   get the input mknob_R from fknob
   if mknob_R->dss_handle == NULL
       return y = R \ t2
   else
       opt = MKL_DSS_DEFAULTS
       dss_solve!(mknob_R->dss_handle, t, y)
"""
function cholfact_inverse_divide(
    R     :: Any,
    b     :: Vector,
    fknob :: Ptr{Void}
)
    y = zeros(length(b))
    cholfact_inverse_divide!(y, R, b, fknob)
    y
end

# Some symbolic names for each permutation vector.
const NOT_PERM_YET = 0 # Maybe permute, but the color is not decided yet.
const ROW_PERM     = 1
const ROW_INV_PERM = 2
const COL_PERM     = 3
const COL_INV_PERM = 4
const NEVER_PERM   = 5 # Never permute. This state can not change to any other.

const LOG_REORDERING = false

@doc """
Reorder arrays based on the the given permutation and inverse permutation vectors.
If inverse_reorder is true, do inverse reordering instead.
"""
function reorder_arrays(
    inverse_reorder     :: Bool,
    permutation_vectors :: Vector,
    arrays...
)
    if LOG_REORDERING
      println("reorder_arrays")
    end

    matrices_done = false
    array_tuple   = arrays[1]
    i = 1
    while i <= length(array_tuple)
        A = array_tuple[i]
        if A == :__delimitor__
            # A delimiter that separate matrices from vectors
            # It means that all matrices have been processed
            matrices_done = true
            i             = i + 1
            continue
        end
        if matrices_done
            assert(typeof(A) <: AbstractVector)
            # For each vector, 1 permutation vector follows
            perm_vec_idx = array_tuple[i + 1]
            perm         = permutation_vectors[perm_vec_idx]
            i    = i + 2
            if inverse_reorder
                inverse_reorder_vector!(A, perm)
            else
                # reordering(v, ROW_PERM) is equivalent to 
                # reverse_reordering(v, ROW_INV_PERM) but is slower. So change
                # to the second form if possible.
                if perm_vec_idx == ROW_PERM || perm_vec_idx == COL_PERM
                    perm = permutation_vectors[perm_vec_idx + 1]
                    inverse_reorder_vector!(A, perm)
                else
                    assert(perm_vec_idx == ROW_INV_PERM || perm_vec_idx == COL_INV_PERM)
                    perm = permutation_vectors[perm_vec_idx - 1]
                    inverse_reorder_vector!(A, perm)
                end
            end
        else
            assert(typeof(A) <: AbstractSparseMatrix)
            # For each matrix, 2 permutation vectors and 1 matrix knob follow
            perm1 = permutation_vectors[array_tuple[i + 1]]
            perm2 = permutation_vectors[array_tuple[i + 2]]
            mknob = array_tuple[i + 3]
            fill_matrix_info_once(mknob, A)
            i     = i + 4
            if inverse_reorder
                reorder_matrix!(A, perm2, perm1)
            else
                reorder_matrix!(A, perm1, perm2)
            end
        end
    end
end

@doc """
The first time an reordering decision maker (a function, represented by the
fknob) has decided that reordering should be done, this function should be 
called to reorder the specified arrays.

Status is a vector of the following elements:
(1) reordering_done:       Bool, true if reordering has already been done
(2) row_perm:              row permutation vector
(3) row_inv_perm:          row inverse permutaiton vector
(4) col_perm:              column permutation vector
(5) col_inv_perm:          column inverse permutaiton vector
(6) reordering_time:       time spent on reordering so far (for statistics)
The vector is updated when the function returns.
"""
function reordering(
    fknob  :: Ptr{Void},
    status :: Vector,
    arrays...
)
    reordering_done = status[1]
    if !reordering_done
        row_perm, row_inv_perm, col_perm, col_inv_perm = get_reordering_vectors(fknob)
        if length(row_perm) > 0
            assert(length(row_inv_perm) > 0 && length(col_perm) > 0 && length(col_inv_perm) > 0)

            status[2] = row_perm
            status[3] = row_inv_perm
            status[4] = col_perm
            status[5] = col_inv_perm

            reordering_time  = status[6]
            reordering_time -= time()

            reorder_arrays(false, status[2 : 5], arrays)

            reordering_time += time()
            status[6]        = reordering_time
            status[1]        = true # reordering is done 
        end
    end
end

@doc """
Reverse reorder the specified arrays. 

Status is a vector of the following 4 elements. See the above reordering()
function for details.
"""
function reverse_reordering(
    status :: Vector,
    arrays...
)
    reordering_done = status[1]
    if reordering_done
        reordering_time  = status[6]
        reordering_time -= time()

        reorder_arrays(true, status[2 : 5], arrays)

        reordering_time += time()
        status[6]        = reordering_time
    end
end

@doc """
Read a matrix market file. Force it to be symmetric if force_symmetric is true.
Error when symmetric_only is true but the matrix is not symmetric (and not
forced to be symmetric). It calls SpMP library to do the actual work, which is 
faster than a pure Julia version.
"""
function matrix_market_read(
    filename        :: AbstractString,
    symmetric_only  :: Bool = false,
    force_symmetric :: Bool = false
)
    # Read header to figure out if it's an array or sparse matrix
    mmfile = open(filename,"r")
    # Read first line
    firstline = chomp(readline(mmfile))
    tokens = split(firstline)
    if length(tokens) != 5
        throw(ParseError(string("Not enough words on first line: ", ll)))
    end
    if tokens[1] != "%%MatrixMarket"
        throw(ParseError(string("Not a valid MatrixMarket header:", ll)))
    end
    (head1, rep, field, symm) = map(lowercase, tokens[2:5])
    if head1 != "matrix"
        throw(ParseError("Unknown MatrixMarket data type: $head1 (only \"matrix\" is supported)"))
    end
    close(mmfile)

    if rep == "array"
      m_ref = Ref{Cint}(0)
      n_ref = Ref{Cint}(0)
      v_ref = Ref{Ptr{Cdouble}}(C_NULL)

      ccall((:load_vector_matrix_market, LIB_PATH), Void,
           (Ptr{Cchar}, Ref{Ptr{Cdouble}}, Ref{Cint}, Ref{Cint}),
           filename, v_ref, m_ref, n_ref)
      assert(n_ref[] == 1)

      return pointer_to_array(v_ref[], m_ref[])
    else
      # Read into a COO array
      sizes::Vector{Cint} = [0, 0, 0, 0]
      ccall((:load_matrix_market_step1, LIB_PATH), Void, 
          (Ptr{UInt8}, Ptr{Cint}, Bool, Bool), filename, pointer(sizes), force_symmetric, false)

      is_symmetric::Cint = sizes[1] # 0/1: true/false    
      if symmetric_only && is_symmetric == 0
          # We cannot handle asymmetric matrix right now, since we need a matrix
          # to be symmetric, and thus we can use its CSC representation as CSR (The
          # SpMP library is based on CSR, while Julia is based on CSC.)
          throw(AsymmetricMatrixMarketFile(filename))
      end

      n::Cint = sizes[2]
      m::Cint = sizes[3]
      assert(is_symmetric == 0 || m == n)
      nnz::Cint = sizes[4]  # Note: if symmetric, nnz includes elements in both 
                            # upper and lower triangle 

      v = Array(Cdouble, nnz)
      i = Array(Cint, nnz)
      j = Array(Cint, n + 1)
      
      A = SparseMatrixCSC{Cdouble, Cint}(m, n, j, i, v)

      # Convert the COO array to CSC array.
      ccall((:load_matrix_market_step2, LIB_PATH), Void, 
          (Ptr{UInt8}, Ptr{Cdouble}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Bool),
          filename, pointer(j), pointer(i), pointer(v), pointer(sizes), true)

      return A
    end
end

function lbfgs_compute_direction!(
    dx,
    k     :: Int,
    it    :: Int,
    n     :: Int,
    S,
    Y,
    dfk)

    if use_SPMP
      ccall((:LBFGSComputeDirection, LIB_PATH), Void,
            (Cint, Cint, Cint, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}),
            k, it, n, S, Y, dfk, dx)
    else
      a = zeros(k)

      mm = min(it - 1, k)
      begin_idx = it + k - mm - 2

      yk = 1
      if it <= k
      else
        skm1 = S[:,(begin_idx + mm)%k + 1]
        ykm1 = Y[:,(begin_idx + mm)%k + 1]
        yk = dot(skm1, ykm1)/dot(ykm1, ykm1)
      end

      p = zeros(mm, 1)
      for i = 1:mm
        p[i] = 1.0/dot(S[:,(begin_idx + i)%k + 1], Y[:,(begin_idx + i)%k + 1])
      end

      q = copy(dfk)
      for i = mm:-1:1
        si = S[:,(begin_idx + i)%k + 1]
        yi = Y[:,(begin_idx + i)%k + 1]
        a[i] = p[i]*dot(si, q)
        q = q - a[i]*yi
      end

      r = yk*q
      for i = 1:mm
        si = S[:,(begin_idx + i)%k + 1]
        yi = Y[:,(begin_idx + i)%k + 1]
        b = p[i]*dot(yi, r)
        r = r + si*(a[i] - b)
      end

      dx[:] = -r
    end
end 

function lbfgs_loss_function1(yXw::Vector, w::Vector, lambda::Number)
  m = length(yXw)

  if use_SPMP
    ccall((:LBFGSLossFunction1, LIB_PATH), Cdouble,
          (Cint, Cint, Ptr{Cdouble}, Ptr{Cdouble}, Cdouble),
          m, length(w), yXw, w, lambda)
  else
    s = sum(log1p(exp(-abs(yXw))) - min(yXw, 0))
    s/m + (lambda/2)*norm(w)^2
  end 
end

function lbfgs_loss_function2!(temp::Vector, y::Vector, yXw::Vector)
  if use_SPMP
    ccall((:LBFGSLossFunction2, LIB_PATH), Void,
          (Ptr{Cdouble}, Cint, Ptr{Cdouble}, Ptr{Cdouble}),
          temp, length(y), y, yXw)
  else
    temp[:] = y./(1 + exp(yXw))
  end
end

function get_spmp_spmv_time()
  ccall((:GetSpMPSpMVTime, LIB_PATH), Cdouble, ())
end

function reset_spmp_spmv_time()
  ccall((:ResetSpMPSpMVTime, LIB_PATH), Void, ())
end

function get_spmp_trisolve_time()
  ccall((:GetSpMPTriangularSolveTime, LIB_PATH), Cdouble, ())
end

function reset_spmp_trisolve_time()
  ccall((:ResetSpMPTriangularSolveTime, LIB_PATH), Void, ())
end

function get_knob_spmv_time()
  ccall((:GetKnobSpMVTime, LIB_PATH), Cdouble, ())
end

function reset_knob_spmv_time()
  ccall((:ResetKnobSpMVTime, LIB_PATH), Void, ())
end

function get_knob_trisolve_time()
  ccall((:GetKnobTriangularSolveTime, LIB_PATH), Cdouble, ())
end

function reset_knob_trisolve_time()
  ccall((:ResetKnobTriangularSolveTime, LIB_PATH), Void, ())
end

function set_knob_log_level(level)
  ccall((:SetLogLevel, LIB_PATH), Void, (Cint,), level)
end

function set_reuse_inspection(reuse)
  ccall((:SetReuseInspection, LIB_PATH), Void, (Bool,), reuse)
end
